apps/web/redisinsight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
spec:
  selector:
    app: redisinsight
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
